bug 943270 - use EncodingUtils::DecoderForEncoding instead of nsICharsetConverterManager::GetUnicodeDecoderRaw when decoding font names. r=jdaggett